# License_Server

./: CMakeLists.txt  builder.sh  impstuff.txt
client/: licence.cpp  licence.hpp  main.cpp  tls_client.cpp  tls_client.hpp
server/: db_manager.cpp  db_manager.hpp  license_handler.cpp  license_handler.hpp  main.cpp  tls_server.cpp  tls_server.hpp
server/certs/: server.crt  server.key
